--- a/app/assets/stylesheets/freelancer.css
+++ b/app/assets/stylesheets/freelancer.css
@@ -87,6 +87,7 @@ header .container {
 header img {
     display: block;
     margin: 0 auto 20px;
+    width: 200px;
 }
 
 header .intro-text .name {
