--- a/app/assets/stylesheets/freelancer.css
+++ b/app/assets/stylesheets/freelancer.css
@@ -302,7 +302,7 @@ section.success {
     transition: top .3s ease,opacity .3s ease;
 }
 
-.floating-label-form-group::not(:first-child) {
+.floating-label-form-group:not(:first-child) {
     padding-left: 14px;
     border-left: 1px solid #eee;
 }
