--- a/app/views/layouts/welcome.html.haml
+++ b/app/views/layouts/welcome.html.haml
@@ -57,7 +57,7 @@
             %hr.star-primary/
         .row{style: "text-align: center;"}
           .col-lg-4.col-lg-offset-2
-            %p У людей есть вещи, которые уже не нужны, но их жалко выбросить. Эта ситуация знакома каждому и мы предлагаем решение вашей проблемы посредством данного сервиса. Вы создаете объявление, о том, что хотите подарить или отдать вещь за небольшую плату. Люди, которым она действительно нужна - приезжают и забирают ее у Вас.
+            %p У людей есть вещи, которые уже не нужны, но их жалко выбросить. Эта ситуация знакома каждому и мы предлагаем решение данной проблемы посредством сервиса FreeDonate. Вы создаете объявление, о том, что хотите подарить или отдать вещь за небольшую плату. Люди, которым она действительно нужна - приезжают и забирают ее у Вас.
           .col-lg-4
             %p
               Если Вы хотите немного заработать на ненужных Вам вещах, тогда ваше объявление будет работать в виде аукциона. Вы устанавливаете минимальную стоимость, а покупатели торгуются между собой, повышая ее. Последний человек поднявший цену - забирает ее у Вас. Подробнее об этом прочтите в
