change pictures on main page

--- a/app/views/layouts/welcome.html.haml
+++ b/app/views/layouts/welcome.html.haml
@@ -70,42 +70,55 @@
             %h2 Что можно отдать?
             %hr.star-light/
             %h3 Практически все!
+            %h3 К примеру
         .row
           .col-sm-4.portfolio-item
             %a.portfolio-link{"data-toggle" => "modal", :href => "#modal1"}
               .caption
                 .caption-content
-                  Книги и учебники
+                  %b Книги и учебники
+                  %br
+                  %span прочитали и стоят пылятся?
               %img.modal1.img-responsive{:alt => "", :src => "#{asset_path('portfolio/cabin.png')}"}/
           .col-sm-4.portfolio-item
             %a.portfolio-link{"data-toggle" => "modal", :href => "#modal2"}
               .caption
                 .caption-content
-                  Одежда и обувь
+                  %b Одежда и обувь
+                  %br
+                  %span не по размеру или вышло из моды?
               %img.modal1.img-responsive{:alt => "", :src => "#{asset_path('portfolio/cake.png')}"}/
           .col-sm-4.portfolio-item
             %a.portfolio-link{"data-toggle" => "modal", :href => "#modal4"}
               .caption
                 .caption-content
-                  Детские игрушки
+                  %b Детские игрушки
+                  %br
+                  %span дети выросли и уже не играют?
               %img.img-responsive{:alt => "", :src => "#{asset_path('portfolio/game.png')}"}/
           .col-sm-4.portfolio-item
             %a.portfolio-link{"data-toggle" => "modal", :href => "#modal3"}
               .caption
                 .caption-content
-                  Мебель
+                  %b Мебель
+                  %br
+                  %span решили купить новый диван?
               %img.modal1.img-responsive{:alt => "", :src => "#{asset_path('portfolio/circus.png')}"}/
           .col-sm-4.portfolio-item
             %a.portfolio-link{"data-toggle" => "modal", :href => "#modal5"}
               .caption
                 .caption-content
-                  Медицинские препараты
+                  %b Медицинские препараты
+                  %br
+                  %span вылечились, а ценное лекарство осталось?
               %img.img-responsive{:alt => "", :src => "#{asset_path('portfolio/safe.png')}"}/
           .col-sm-4.portfolio-item
             %a.portfolio-link{"data-toggle" => "modal", :href => "#modal6"}
               .caption
                 .caption-content
-                  Стройматериалы и иструменты
+                  %b Стройматериалы и иструменты
+                  %br
+                  %span закуплено больше, чем потребовалось?
               %img.img-responsive{:alt => "", :src => "#{asset_path('portfolio/submarine.png')}"}/
     / Contact Section
     %section#signup
