--- a/app/assets/stylesheets/freelancer.css
+++ b/app/assets/stylesheets/freelancer.css
@@ -80,14 +80,14 @@ header {
 }
 
 header .container {
-    padding-top: 100px;
-    padding-bottom: 50px;
+    padding-top: 140px !important;
+    padding-bottom: 50px !important;
 }
 
 header img {
     display: block;
     margin: 0 auto 20px;
-    width: 150px;
+    width: 250px;
 }
 
 header .intro-text .name {
